<resources>
    <string name="app_name">SimpleBudget</string>
    <string name="action_modify_categories">Modify categories</string>
    <string name="action_settings">Settings</string>
    <string name="add_edit_category_label">Category</string>
    <string name="add_edit_amount_label">Amount</string>
    <string name="add_edit_add_submit_button">Log</string>
    <string name="add_edit_edit_submit_button">Save</string>
    <string name="add_edit_add_success">Entry has been recorded</string>
    <string name="add_edit_edit_success">Entry has been updated</string>
    <string name="calendar_activity_title">SimpleBudget: Calendar</string>
    <string name="calendar_add_button">Add</string>
    <string name="calendar_date_header">Entries on %s:</string>
    <string name="calendar_no_entries_error_message">There\'s nothing here...</string>
    <string name="calendar_month_stats_button">Month stats</string>
    <string name="calendar_entry_edit">Edit</string>
    <string name="calendar_entry_remove">Remove</string>
    <string name="calendar_remove_title">Remove entry</string>
    <string name="calendar_remove_message">Are you sure you want to remove this entry? This cannot be undone!</string>
    <string name="calendar_remove_confirm_button">Remove</string>
    <string name="stats_activity_title">SimpleBudget: Stats</string>
    <string name="stats_balance_label">Net balance for this period: %s</string>
    <string name="stats_header_category">Category</string>
    <string name="stats_header_spending">Spendings</string>
    <string name="stats_no_entries_error_message">No entries in this time period</string>
    <string name="category_activity_title">SimpleBudget: Categories</string>
    <string name="category_edit_button">Edit</string>
    <string name="category_remove_button">Remove</string>
    <string name="category_edit_title">Edit category</string>
    <string name="category_edit_confirm_button">Save</string>
    <string name="category_remove_title">Remove category</string>
    <string name="category_remove_message">Are you sure you want to remove the category \"%s\"?</string>
    <string name="category_remove_confirm_button">Remove</string>
    <string name="category_add_button">Add new category</string>
    <string name="category_add_confirm_button">Add</string>
    <string name="category_add_title">Add category</string>
    <string name="category_exists_error_message">A category of that name already exists!</string>
    <string name="category_empty_input_error_message">You must enter a name for the category.</string>
    <string name="generic_okay">Ok</string>
    <string name="generic_cancel">Cancel</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_starting_day_of_the_week">Starting day of the week</string>
    <string-array name="pref_starting_day_of_the_week_keys">
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
    </string-array>
    <!-- DON'T TRANSLATE -->
    <string-array name="pref_starting_day_of_the_week_values">
        <item>saturday</item>
        <item>sunday</item>
        <item>monday</item>
    </string-array>
    <string name="pref_export">Export data</string>
    <string name="pref_export_summary">Exports all entries to a tab delimited file. File will be stored in the downloads folder.</string>
    <string name="pref_export_action_send">(Optionally) send the file</string>

    <string name="pref_header_currency">Currency</string>
    <string name="pref_currency_symbol">Currency symbol</string>
    <string name="pref_currency_symbol_placement">Placement of currency symbol</string>
    <string-array name="pref_currency_symbol_placement_keys">
        <item>Left</item>
        <item>Right</item>
    </string-array>
    <!-- DON'T TRANSLATE -->
    <string-array name="pref_currency_symbol_placement_values">
        <item>left</item>
        <item>right</item>
    </string-array>
    <string name="pref_decimal_separator">Decimal separator</string>
    <string-array name="pref_decimal_separator_keys">
        <item>Period</item>
        <item>Comma</item>
    </string-array>
    <!-- DON'T TRANSLATE -->
    <string-array name="pref_decimal_separator_values">
        <item>.</item>
        <item>,</item>
    </string-array>
</resources>
